Specify java command line options for running app